// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component renders an error state 1`] = `<div />`;

exports[`Sidebar component renders correctly 1`] = `
<section
  className="sidebar"
>
  <svg
    className="extra-logo"
    height={null}
    width={null}
  >
    <use
      xlinkHref="#id"
    />
  </svg>
  <nav
    className="site-nav"
  >
    <section>
      <h3>
        Collections
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/collections/1"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            something
          </a>
        </li>
        <li>
          <a
            className={undefined}
            href="/new-collection"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Channels
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/channels/1"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            something else
          </a>
        </li>
        <li>
          <a
            className={undefined}
            href="/new-channel"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        General
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Performance
          </a>
        </li>
        <li>
          <a
            className={undefined}
            href="/account"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Account
          </a>
        </li>
        <li>
          <form
            action="/logout"
            method="post"
            onSubmit={[Function]}
          >
            <input
              name="_method"
              type="hidden"
              value="delete"
            />
            <input
              name="_csrf_token"
              type="hidden"
            />
            <button
              className="linkButton"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 0.8)",
                  "fill": "rgba(255, 255, 255, 0.8)",
                }
              }
            >
              <svg
                className="icon"
                height={null}
                width={null}
              >
                <use
                  xlinkHref="#id"
                />
              </svg>
              Logout
            </button>
          </form>
        </li>
      </ul>
    </section>
  </nav>
  <div
    className="gradient-container"
  >
    <div
      className="gradient"
    />
  </div>
</section>
`;

exports[`Sidebar component renders loading state 1`] = `
<section
  className="sidebar"
>
  <svg
    className="extra-logo"
    height={null}
    width={null}
  >
    <use
      xlinkHref="#id"
    />
  </svg>
  <nav
    className="site-nav"
  >
    <section>
      <h3>
        Collections
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/new-collection"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Channels
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/new-channel"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        General
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Performance
          </a>
        </li>
        <li>
          <a
            className={undefined}
            href="/account"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
              height={null}
              width={null}
            >
              <use
                xlinkHref="#id"
              />
            </svg>
            Account
          </a>
        </li>
        <li>
          <form
            action="/logout"
            method="post"
            onSubmit={[Function]}
          >
            <input
              name="_method"
              type="hidden"
              value="delete"
            />
            <input
              name="_csrf_token"
              type="hidden"
            />
            <button
              className="linkButton"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 0.8)",
                  "fill": "rgba(255, 255, 255, 0.8)",
                }
              }
            >
              <svg
                className="icon"
                height={null}
                width={null}
              >
                <use
                  xlinkHref="#id"
                />
              </svg>
              Logout
            </button>
          </form>
        </li>
      </ul>
    </section>
  </nav>
  <div
    className="gradient-container"
  >
    <div
      className="gradient"
    />
  </div>
</section>
`;
